--- a/index.html
+++ b/index.html
@@ -42,3 +42,12 @@
     </tbody>
   </table>
 </html>
+<!-- J again! so very quickly, I love doing CSS/HTML stuffs becasue I did a lot of this in 
+freecodeacademy.org. But, while I am familiar with this, I still don't know everyhing about 
+certain things like positioning and the stuff that allows a thingy (it's my catch-all phrase)
+ to move across the page. But here, this is usually something cosmetic, like how a webpage looks etc. 
+Right now, we are creating a web page to show our introduction to DOM. So here we have
+1. Header (standard, we need that) 2. Body (again pretty standard, it allows us to have things like 
+<p> (paragraphs) and content 3. Table (not standard, but does make thing ~pretty~/orderly). 
+  The Lab is asking us to make a markup of a browser to show how much we have learned. Fun!
+  )-->
